@@ -3,108 +3,146 @@ package com.github.bgrebennikov.recommendationservice.controller;
 import com.github.bgrebennikov.recommendationservice.data.RecommendationItem;
 import com.github.bgrebennikov.recommendationservice.data.RecommendationResponse;
 import com.github.bgrebennikov.recommendationservice.service.RecommendationService;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
-import org.springframework.http.MediaType;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(controllers = RecommendationController.class)
-class RecommendationControllerWebMvcTest {
+// ⭐ ИСПРАВЛЕНО: тестируем RecommendationController, а не RuleController
+@WebMvcTest(RecommendationController.class)
+class RecommendationControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockitoBean
+    @MockBean
     private RecommendationService recommendationService;
 
-    private static final UUID USER_FOR_INVEST_500 = UUID.fromString("cd515076-5d8a-44be-930e-8d4fcb79f42d");
-    private static final UUID USER_FOR_TOP_SAVING = UUID.fromString("d4a4d619-9a0c-4fc5-b0cb-76c49409546b");
-    private static final UUID USER_FOR_SIMPLE_CREDIT = UUID.fromString("1f9b149c-6577-448a-bc94-16bea229b71a");
+    private final UUID testUserId = UUID.fromString("cd515076-5d8a-44be-930e-8d4fcb79f42d");
 
     @Test
-    @DisplayName("Должен вернуть рекомендацию Invest 500 для соответствующего пользователя")
-    void shouldReturnInvest500Recommendation() throws Exception {
-        RecommendationItem investItem = new RecommendationItem(
-                UUID.fromString("22222222-2fff-41af-baff-90ccd7402925"),
+    void shouldReturnRecommendationsWhenServiceReturnsData() throws Exception {
+        RecommendationItem item1 = new RecommendationItem(
+                UUID.fromString("147f6a0f-3b91-413b-ab99-87f081d60d5a"),
                 "Invest 500",
-                "Текст ТЗ для Invest 500"
+                "Откройте свой путь к успеху с индивидуальным инвестиционным счетом (ИИС) от нашего банка!"
         );
-        RecommendationResponse mockResponse = new RecommendationResponse(USER_FOR_INVEST_500.toString(), List.of(investItem));
 
-        Mockito.when(recommendationService.getRecommendations(USER_FOR_INVEST_500)).thenReturn(mockResponse);
-
-        mockMvc.perform(get("/recommendation/" + USER_FOR_INVEST_500)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.user_id").value(USER_FOR_INVEST_500.toString()))
-                .andExpect(jsonPath("$.recommendations[0].name").value("Invest 500"))
-                .andExpect(jsonPath("$.recommendations[0].id").value("22222222-2fff-41af-baff-90ccd7402925"));
-    }
-
-    @Test
-    @DisplayName("Должен вернуть рекомендацию Top Saving для соответствующего пользователя")
-    void shouldReturnTopSavingRecommendation() throws Exception {
-        RecommendationItem savingItem = new RecommendationItem(
+        RecommendationItem item2 = new RecommendationItem(
                 UUID.fromString("59efc529-2fff-41af-baff-90ccd7402925"),
                 "Top Saving",
-                "Текст ТЗ для Top Saving"
+                "Откройте свою собственную «Копилку» с нашим банком!"
         );
-        RecommendationResponse mockResponse = new RecommendationResponse(USER_FOR_TOP_SAVING.toString(), List.of(savingItem));
 
-        Mockito.when(recommendationService.getRecommendations(USER_FOR_TOP_SAVING)).thenReturn(mockResponse);
+        RecommendationResponse mockResponse = new RecommendationResponse(
+                testUserId.toString(),
+                List.of(item1, item2)
+        );
 
-        mockMvc.perform(get("/recommendation/" + USER_FOR_TOP_SAVING)
-                        .accept(MediaType.APPLICATION_JSON))
+        when(recommendationService.getRecommendations(testUserId)).thenReturn(mockResponse);
+
+        mockMvc.perform(get("/recommendation/{userId}", testUserId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.user_id").value(USER_FOR_TOP_SAVING.toString()))
-                .andExpect(jsonPath("$.recommendations[0].name").value("Top Saving"))
-                .andExpect(jsonPath("$.recommendations[0].id").value("59efc529-2fff-41af-baff-90ccd7402925"));
+                .andExpect(jsonPath("$.user_id").value(testUserId.toString()))
+                .andExpect(jsonPath("$.recommendations").isArray())
+                .andExpect(jsonPath("$.recommendations.length()").value(2))
+                .andExpect(jsonPath("$.recommendations[0].id").value("147f6a0f-3b91-413b-ab99-87f081d60d5a"))
+                .andExpect(jsonPath("$.recommendations[0].name").value("Invest 500"))
+                .andExpect(jsonPath("$.recommendations[1].id").value("59efc529-2fff-41af-baff-90ccd7402925"))
+                .andExpect(jsonPath("$.recommendations[1].name").value("Top Saving"));
     }
 
     @Test
-    @DisplayName("Должен вернуть рекомендацию Простой кредит для соответствующего пользователя")
-    void shouldReturnSimpleCreditRecommendation() throws Exception {
-        RecommendationItem creditItem = new RecommendationItem(
+    void shouldReturnEmptyRecommendationsWhenServiceReturnsEmptyList() throws Exception {
+        RecommendationResponse emptyResponse = new RecommendationResponse(
+                testUserId.toString(),
+                List.of()
+        );
+
+        when(recommendationService.getRecommendations(testUserId)).thenReturn(emptyResponse);
+
+        mockMvc.perform(get("/recommendation/{userId}", testUserId))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.user_id").value(testUserId.toString()))
+                .andExpect(jsonPath("$.recommendations").isArray())
+                .andExpect(jsonPath("$.recommendations").isEmpty());
+    }
+
+    @Test
+    void shouldReturnRecommendationsForDifferentUserId() throws Exception {
+        UUID anotherUserId = UUID.fromString("d4a4d619-9a0c-4fc5-b0cb-76c49409546b");
+        RecommendationItem item = new RecommendationItem(
                 UUID.fromString("ab138afb-f3ba-4a93-b74f-0fcee86d447f"),
                 "Простой кредит",
-                "Текст ТЗ для Простого кредита"
+                "Откройте мир выгодных кредитов с нами!"
         );
-        RecommendationResponse mockResponse = new RecommendationResponse(USER_FOR_SIMPLE_CREDIT.toString(), List.of(creditItem));
 
-        Mockito.when(recommendationService.getRecommendations(USER_FOR_SIMPLE_CREDIT)).thenReturn(mockResponse);
+        RecommendationResponse mockResponse = new RecommendationResponse(
+                anotherUserId.toString(),
+                List.of(item)
+        );
 
-        mockMvc.perform(get("/recommendation/" + USER_FOR_SIMPLE_CREDIT)
-                        .accept(MediaType.APPLICATION_JSON))
+        when(recommendationService.getRecommendations(anotherUserId)).thenReturn(mockResponse);
+
+        mockMvc.perform(get("/recommendation/{userId}", anotherUserId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.user_id").value(USER_FOR_SIMPLE_CREDIT.toString()))
-                .andExpect(jsonPath("$.recommendations[0].name").value("Простой кредит"))
-                .andExpect(jsonPath("$.recommendations[0].id").value("ab138afb-f3ba-4a93-b74f-0fcee86d447f"));
+                .andExpect(jsonPath("$.user_id").value(anotherUserId.toString()))
+                .andExpect(jsonPath("$.recommendations").isArray())
+                .andExpect(jsonPath("$.recommendations.length()").value(1))
+                .andExpect(jsonPath("$.recommendations[0].id").value("ab138afb-f3ba-4a93-b74f-0fcee86d447f"))
+                .andExpect(jsonPath("$.recommendations[0].name").value("Простой кредит"));
     }
 
     @Test
-    @DisplayName("Должен вернуть статус 200 и пустой список рекомендаций, если подходящих правил нет")
-    void shouldReturnEmptyRecommendationsList() throws Exception {
-        UUID userId = UUID.randomUUID();
-        RecommendationResponse mockResponse = new RecommendationResponse(userId.toString(), Collections.emptyList());
+    void shouldHandleValidUuidInPath() throws Exception {
+        UUID validUuid = UUID.randomUUID();
+        RecommendationResponse mockResponse = new RecommendationResponse(
+                validUuid.toString(),
+                List.of()
+        );
 
-        Mockito.when(recommendationService.getRecommendations(userId)).thenReturn(mockResponse);
+        when(recommendationService.getRecommendations(validUuid)).thenReturn(mockResponse);
 
-        mockMvc.perform(get("/recommendation/" + userId)
-                        .accept(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/recommendation/{userId}", validUuid))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.user_id").value(userId.toString()))
-                .andExpect(jsonPath("$.recommendations").isEmpty());
+                .andExpect(jsonPath("$.user_id").value(validUuid.toString()));
+    }
+
+    @Test
+    void shouldReturnCorrectJsonStructure() throws Exception {
+        RecommendationItem item = new RecommendationItem(
+                UUID.fromString("147f6a0f-3b91-413b-ab99-87f081d60d5a"),
+                "Test Product",
+                "Test description"
+        );
+
+        RecommendationResponse mockResponse = new RecommendationResponse(
+                testUserId.toString(),
+                List.of(item)
+        );
+
+        when(recommendationService.getRecommendations(testUserId)).thenReturn(mockResponse);
+
+        mockMvc.perform(get("/recommendation/{userId}", testUserId))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.user_id").exists())
+                .andExpect(jsonPath("$.recommendations").exists())
+                .andExpect(jsonPath("$.user_id").isString())
+                .andExpect(jsonPath("$.recommendations").isArray())
+                .andExpect(jsonPath("$.recommendations[0].id").exists())
+                .andExpect(jsonPath("$.recommendations[0].name").exists())
+                .andExpect(jsonPath("$.recommendations[0].text").exists())
+                .andExpect(jsonPath("$.recommendations[0].id").isString())
+                .andExpect(jsonPath("$.recommendations[0].name").isString())
+                .andExpect(jsonPath("$.recommendations[0].text").isString());
     }
 }
